<resources>
    <string name="app_name">ReservaRestaurante</string>
    <string name="reservas">Reservas</string>
    <string name="clientes">Clientes</string>
    <string name="mesas">Mesas</string>
    <string name="lista_clientes">Clientes</string>
    <string name="lista_mesas">Mesas</string>
    <string name="lista_reservas">Reservas</string>
    <string name="botaoVoltarReservas">Voltar</string>

    <string name="ItemClienteTitulo">Dados Cliente</string>
    <string name="ItemClienteNome">José dos Santos Silva</string>
    <string name="ItemClienteTelefone">963145236</string>
    <string name="ItemClienteNif">196325237</string>
    <string name="ItemClienteMorada">Rua de São Vicente 10, 6300-510 Guarda</string>

    <string name="ItemMesaTitulo">Mesa</string>
    <string name="ItemMesaNumero">1</string>
    <string name="ItemMesaLugares">4</string>


    <string name="ItemReservaTitulo">Reserva</string>
    <string name="ItemReservaData">10/07/2022</string>
    <string name="ItemReservaNrPessoas">5</string>
    <string name="ItemReservaCliente">José dos Santos Silva</string>
    <string name="ItemReservaMesa">1</string>
    <string name="ItemReservaRefeicao">Almoço</string>


    <string name="MenuReservaActionSettings">Settings</string>
    <string name="MenuListaReservaActionInserir">Inserir</string>
    <string name="MenuListaReservaActionalterar">Alterar</string>
    <string name="MenuListaReservaActioneliminar">Eliminar</string>

    <string name="editTextDataReserva">Data Reserva</string>
    <string name="editTextNrPessoasReserva">Número de Pessoas</string>
    <string name="textViewClienteReserva">Cliente</string>
    <string name="textViewMesaReserva">Mesa</string>
    <string name="textViewRefeicaoReserva">Refeição</string>

    <string name="menuEdicaoGuardar">Guardar</string>
    <string name="menuEdicaoCancelar">Cancelar</string>

    <string name="dataReservaObrigatorio">Preencha este Campo</string>
    <string name="nrPessoasReservaObrigatorio">Preencha este Campo</string>
    <string name="clienteReservaObrigatorio">Preencha este Campo</string>
    <string name="mesaReservaObrigatorio">Preencha este Campo</string>
    <string name="refeicaoReservaObrigatorio">Preencha este Campo</string>


    <string name="reservaGuardadaSucesso">Reserva guardada com sucesso</string>
    <string name="erroGuardarReserva">Erro ao guardar Reserva</string>

    <string name="eliminarReservaLabel">Eliminar Reserva</string>

    <string name="nomeCliente">Nome cliente</string>
    <string name="mesaNumero">Mesa</string>
    <string name="refeicao">Refeição</string>

    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>

    <string name="erroEliminarReserva">Erro ao Eliminar Reserva</string>
    <string name="reservaEliminadaSucesso">Reserva eliminada com sucesso</string>

    <string name="confirmaEliminarReserva">Tem a certeza que pretende eliminar esta Reserva?</string>

    <string name="inserirClienteNome">Nome Cliente</string>
    <string name="inserirClienteTelefone">Contato Telefónico</string>
    <string name="inserirClienteNif">NIF</string>
    <string name="inserirClienteMorada">Morada</string>

    <string name="inserirMesaNrMesa">Número Mesa</string>
    <string name="inserirMesaLugares">Quantidade de Lugares</string>

    <string name="mesaGuardadaSucesso">Mesa guardada com sucesso</string>
    <string name="erroGuardarMesa">Erro ao guardar Mesa</string>

    <string name="clienteGuardadoSucesso">Cliente guardado com sucesso</string>
    <string name="erroGuardarCliente">Erro ao guardar Cliente</string>

    <string name="EliminarCliente">Eliminar Cliente</string>
    <string name="EliminarNome">Nome</string>
    <string name="EliminarNomeCliente">José dos Santos Silva</string>
    <string name="EliminarTelefone">Contato Telefónico</string>
    <string name="EliminarTelefoneCliente">963145236</string>
    <string name="EliminarNif">Nif</string>
    <string name="EliminarNifCliente">196325237</string>
    <string name="EliminarMorada">Morada</string>
    <string name="EliminarMoradaCliente">Rua de São Vicente 10, 6300-510 Guarda</string>

    <string name="confirmarEliminarCliente">Tem a certeza que pretende eliminar este Cliente?</string>
    <string name="erroEliminarCliente">Erro ao eliminar Cliente</string>
    <string name="clienteEliminadoSucesso">Cliente Eliminado com sucesso</string>

    <string name="EliminarMesa">Eliminar Mesa</string>
    <string name="EliminarMesaNr">1</string>
    <string name="EliminarMesaLugares">4</string>


    <string name="confirmarEliminarMesa">Tem a certeza que pretende eliminar esta Mesa?</string>
    <string name="erroEliminarMesa">Erro ao eliminar Mesa</string>
    <string name="mesaEliminadaSucesso">Mesa Eliminada com sucesso</string>


    <string name="menuVoltaMenuPrincipal">Voltar</string>

    <string name="ItemRefeicaoTitulo">Refeições</string>
    <string name="textViewTipoRefeicaoTitulo">Refeição</string>
    <string name="ItemRefeicaoTipoRefeicao">Almoço</string>

    <string name="inputTextRefeicao">Refeição</string>

    <string name="erroGuardarRefeicao">Erro ao Guardar Refeição</string>
    <string name="reservaGuardadoSucesso">Reserva Guardada com sucesso</string>

    <string name="textViewEliminarRefeicaoTitulo">Eliminar Refeição</string>
    <string name="textViewEliminarTipoRefeicao">Refeição</string>
    <string name="textViewEliminarRefeicao">Almoço</string>
    
    <string name="EliminarRefeicao">Eliminar Refeição</string>
    <string name="confirmarEliminarRefeicao">Tem a certeza que pretende Eliminar esta refeição?</string>
    <string name="erroEliminarRefeicao">Erro ao eliminar Refeição</string>
    <string name="sucessoEliminarRefeicao">Refeição Eliminada com Sucesso</string>


    <string name="textViewInserirClienteTitulo">Novo Cliente</string>
    <string name="textViewInserirMesaTitulo">Nova Mesa</string>
    <string name="textViewInserirRefeicaoTitulo">Nova Refeição</string>
    <string name="textViewInserirReservaTitulo">Nova Reserva</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>