<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_eliminar"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/MenuListaReservaActioneliminar"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_volta_menu"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menuVoltaMenuPrincipal"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_inserir"
        android:icon="@drawable/icon_add"
        android:title="@string/MenuListaReservaActionInserir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_alterar"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/MenuListaReservaActionalterar"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>