<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InserirReservaFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDataReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTextDataReserva"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNrPessoasReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editTextNrPessoasReserva" />

            <TextView
                android:id="@+id/textViewClienteReserva"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:text="@string/textViewClienteReserva"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerClienteReserva"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewMesaReserva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewMesaReserva"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerMesaReserva"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewRefeicaoReserva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewRefeicaoReserva"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerRefeicaoReserva"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>