<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InserirClientesFragment" >

    <TextView
        android:id="@+id/textViewInserirClienteTitulo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/textViewInserirClienteTitulo"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextClienteNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inserirClienteNome"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextClienteTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inserirClienteTelefone"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputTextClienteNif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inserirClienteNif"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputTextClienteMorada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inserirClienteMorada"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>